<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>es.uniovi.asw.e3b</groupId>
	<artifactId>incimanager_e3b</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>InciManager_e3b</name>
	<description>Módulo de gestión y carga de incidencias</description>
	<url>https://github.com/Arquisoft/InciManager_e3b/</url>
	<organization>
		<name>Escuela de Ingeniería Informática de la Universidad de Oviedo</name>
		<url>https://ingenieriainformatica.uniovi.es/</url>
	</organization>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.4.7.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<encoding>UTF-8</encoding>
		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
		<project.resources.sourceEncoding>${encoding}</project.resources.sourceEncoding>
		<maven.build.timestamp.format>yyyy-MM-dd-HH:mm</maven.build.timestamp.format>
		<java.version>1.8</java.version>
		<jdk.version>1.8</jdk.version>
		<argLine>-XX:MaxPermSize=512m</argLine>
		<surefire.argLine>${argLine}</surefire.argLine>
		<failsafe.argLine>${argLine}</failsafe.argLine>
		<postgresql.version>9.1-901-1.jdbc4</postgresql.version>
		<selenium-htmlunit-driver.version>2.52.0</selenium-htmlunit-driver.version>
		<cucumber.version>2.3.0</cucumber.version>
		<cucumber-reporting.version>3.14.0</cucumber-reporting.version>
		<docker-maven-plugin-fabric8.version>0.24.0</docker-maven-plugin-fabric8.version>
		<jacoco-maven-plugin.version>0.8.0</jacoco-maven-plugin.version>
		<maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>
		<maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
		<maven-javadoc-plugin.version>3.0.0</maven-javadoc-plugin.version>
		<findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>
		<maven-pmd-plugin.version>3.9.0</maven-pmd-plugin.version>
		<cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>

		<docker.registry.address>arquisoft.ddns.net</docker.registry.address>
		<postgres.server.port>5432</postgres.server.port>
		<postgres.user>postgres</postgres.user>
		<postgres.password>changeit</postgres.password>
		<spring.datasource.url>jdbc:postgresql://postgres:${postgres.server.port}/postgres</spring.datasource.url>
		<zookeeper.server.port>2181</zookeeper.server.port>
		<kafka.server.port>9092</kafka.server.port>
		<incimanager.server.port>8091</incimanager.server.port>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-bus-kafka</artifactId>
		</dependency>
		<dependency>
			<groupId>postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-htmlunit-driver</artifactId>
			<version>${selenium-htmlunit-driver.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-spring</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>Camden.SR5</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>${encoding}</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>io.fabric8</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>${docker-maven-plugin-fabric8.version}</version>
				<configuration>
					<logDate>none</logDate>
					<userColor>true</userColor>
					<imagePullPolicy>IfNotPresent</imagePullPolicy>
					<images>
						<image>
							<alias>postgres</alias>
							<name>postgres:alpine</name>
							<run>
								<env>
									<POSTGRES_USER>${postgres.user}</POSTGRES_USER>
									<POSTGRES_PASSWORD>${postgres.password}</POSTGRES_PASSWORD>
								</env>
								<ports>
									<port>${postgres.server.port}:${postgres.server.port}</port>
								</ports>
								<wait>
									<log>^.*database system is ready to accept connections.*$</log>
									<time>30000</time>
								</wait>
								<log>
									<enabled>true</enabled>
									<prefix>%a [%C] |</prefix>
									<color>blue</color>
								</log>
							</run>
						</image>
						<image>
							<alias>zookeeper</alias>
							<name>wurstmeister/zookeeper</name>
							<run>
								<ports>
									<port>${zookeeper.server.port}:${zookeeper.server.port}</port>
								</ports>
								<wait>
									<log>^.*binding to port .*/.*:${zookeeper.server.port}.*$</log>
									<time>30000</time>
								</wait>
								<log>
									<enabled>true</enabled>
									<prefix>%a [%C] |</prefix>
									<color>blue</color>
								</log>
							</run>
						</image>
						<image>
							<alias>kafka</alias>
							<name>wurstmeister/kafka</name>
							<run>
								<env>
									<KAFKA_LISTENERS>PLAINTEXT://:${kafka.server.port}</KAFKA_LISTENERS>
									<KAFKA_ADVERTISED_LISTENERS>PLAINTEXT://kafka:${kafka.server.port}</KAFKA_ADVERTISED_LISTENERS>
									<KAFKA_ZOOKEEPER_CONNECT>zookeeper:${zookeeper.server.port}</KAFKA_ZOOKEEPER_CONNECT>
								</env>
								<ports>
									<port>${kafka.server.port}:${kafka.server.port}</port>
								</ports>
								<volumes>
									<bind>
										<volume>/var/run/docker.sock:/var/run/docker.sock</volume>
									</bind>
								</volumes>
								<links>
									<link>zookeeper</link>
								</links>
								<dependsOn>
									<container>zookeeper</container>
								</dependsOn>
								<wait>
									<log>^.*started \(kafka.server.KafkaServer\).*$</log>
									<time>30000</time>
								</wait>
								<log>
									<enabled>true</enabled>
									<prefix>%a [%C] |</prefix>
									<color>blue</color>
								</log>
							</run>
						</image>
						<image>
							<alias>${project.artifactId}</alias>
							<name>${docker.registry.address}/${project.artifactId}</name>
							<build>
								<from>maven:3.5-jdk-8-alpine</from>
								<tags>
									<tag>latest</tag>
									<tag>${project.version}</tag>
								</tags>
								<assembly>
									<inline>
										<fileSets>
											<fileSet>
												<directory>${project.build.directory}</directory>
												<includes>
													<include>*.jar</include>
												</includes>
												<outputDirectory>/usr/share/${project.artifactId}/</outputDirectory>
											</fileSet>
										</fileSets>
									</inline>
								</assembly>
								<ports>
									<port>${incimanager.server.port}</port>
								</ports>
								<entryPoint>
									<arg>/usr/bin/java</arg>
									<arg>-Djava.security.egd=file:/dev/./urandom</arg>
									<arg>-jar</arg>
									<arg>/maven/usr/share/${project.artifactId}/${project.artifactId}-${project.version}.${project.packaging}</arg>
									<arg>--spring.datasource.url=${spring.datasource.url}</arg>
									<arg>--spring.datasource.username=${postgres.user}</arg>
									<arg>--spring.datasource.password=${postgres.password}</arg>
									<arg>--spring.cloud.stream.kafka.binder.brokers=kafka:${kafka.server.port}</arg>
									<arg>--spring.cloud.stream.kafka.binder.zkNodes=zookeeper:${zookeeper.server.port}</arg>
								</entryPoint>
							</build>
							<run>
								<ports>
									<port>${incimanager.server.port}:${incimanager.server.port}</port>
								</ports>
								<volumes>
									<bind>
										<volume>/tmp</volume>
									</bind>
								</volumes>
								<wait>
									<url>http://${docker.host.address}:${incimanager.server.port}</url>
									<time>120000</time>
								</wait>
								<links>
									<link>postgres</link>
									<link>zookeeper</link>
									<link>kafka</link>
								</links>
								<dependsOn>
									<container>postgres</container>
									<container>zookeeper</container>
									<container>kafka</container>
								</dependsOn>
								<log>
									<enabled>true</enabled>
									<prefix>%a [%C] |</prefix>
									<color>cyan</color>
								</log>
							</run>
						</image>
					</images>
				</configuration>
				<executions>
					<execution>
						<id>start</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>build</goal>
							<goal>start</goal>
						</goals>
					</execution>
					<execution>
						<id>stop</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>stop</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<printSummary>true</printSummary>
					<excludes>
						<exclude>**/*IT.java</exclude>
						<exclude>%regex[.*IntegrationTests?\..*]</exclude>
						<exclude>**/*UAT.java</exclude>
						<exclude>%regex[.*AcceptanceTests?\..*]</exclude>
					</excludes>
					<runOrder>alphabetical</runOrder>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<printSummary>true</printSummary>
					<includes>
						<include>**/*IT.java</include>
						<include>%regex[.*IntegrationTests?\..*]</include>
						<include>**/*UAT.java</include>
						<include>%regex[.*AcceptanceTests?\..*]</include>
					</includes>
					<runOrder>alphabetical</runOrder>
					<executions>
						<execution>
							<goals>
								<goal>integration-test</goal>
								<goal>verify</goal>
							</goals>
						</execution>
					</executions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
				<configuration>
					<excludes>
						<exclude>**com.steadystate*</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>pre-unit-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>pre-integration-test</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>prepare-agent-integration</goal>
						</goals>
					</execution>
					<execution>
						<id>post-integration-test</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>report-integration</goal>
						</goals>
					</execution>
					<execution>
						<id>merge-results</id>
						<phase>verify</phase>
						<goals>
							<goal>merge</goal>
						</goals>
						<configuration>
							<fileSets>
								<fileSet>
									<directory>${project.build.directory}</directory>
									<includes>
										<include>jacoco*.exec</include>
									</includes>
								</fileSet>
							</fileSets>
							<destFile>${project.build.directory}/jacoco-aggregate.exec</destFile>
						</configuration>
					</execution>
					<execution>
						<id>post-merge-report</id>
						<phase>verify</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${project.build.directory}/jacoco-aggregate.exec</dataFile>
							<outputDirectory>${project.reporting.outputDirectory}/jacoco-aggregate</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<configuration>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
					<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${maven-checkstyle-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${findbugs-maven-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${maven-pmd-plugin}</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>${cobertura-maven-plugin}</version>
				<configuration>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
					<check />
				</configuration>
			</plugin>
			<plugin>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>${cucumber-reporting.version}</version>
			</plugin>
		</plugins>
	</reporting>

	<repositories>
		<repository>
			<id>spring-releases</id>
			<url>https://repo.spring.io/libs-release</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-releases</id>
			<url>https://repo.spring.io/libs-release</url>
		</pluginRepository>
	</pluginRepositories>

</project>
